samples/_failures_safe/1761468266_e7c246_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4387d6ee.c: In function ‘main’:
./samples/SAFE/__tmp_4387d6ee.c:162:30: error: expected ‘)’ at end of input
  162 |     size_t len = strlen(input
      |                        ~     ^
      |                              )
./samples/SAFE/__tmp_4387d6ee.c:162:5: error: expected declaration or statement at end of input
  162 |     size_t len = strlen(input
      |     ^~~~~~
